# rscat

./: Cargo.toml  README.md  about.toml  build.rs
.github/workflows/: rust.yml
src/: main.rs
src/rendering/: defaults.rs  mod.rs
src/shaders/: shader.frag  shader.vert
