[package]
name = "rscat"
version = "0.1.0"
edition = "2018"

[build-dependencies]
glsl-to-spirv = "0.1"

[dependencies]
env_logger = "0.7"
futures = "0.3"
include_dir = "0.5" 
log = "0.4"
nalgebra = "0.21"
num-traits = "0.2"
memoffset = "0.5"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", branch="v0.5" }
winit = "0.22"
rand = "0.7.3"