[package]
name = "rscat"
version = "0.1.0"
edition = "2018"

[build-dependencies]
glsl-to-spirv = "0.1"

[dependencies]
env_logger = "0.7"
futures = "0.3"
include_dir = "0.5" 
log = "0.4"
nalgebra = "0.21"
num-traits = "0.2"
memoffset = "0.5"
wgpu = "0.5"
imgui = "0.4"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs" } # The version published to crates.io still depends on imgui 0.3?
imgui-winit-support = "0.4"
winit = "0.22"
rand = "0.7.3"